		- AI now properly aims and fires unguided missiles in orbit.
	- Fix weapon types with no targeting type (i.e. AIR-2) not firing within engage range.
- UI:
	- Updated Chinese localization thanks to user Marv1n-M.
- Weapons
	- Missiles:
		- Change missile drop time increment from 0.5s to 0.1s.
		- Modular Missiles will be selected to intercept missiles if they have Engage Missiles enabled.
		- Fix Modular Missiles with Orbital Guidance not hitting vessel and missile targets.
		- Modular Missiles with Orbital Guidance now perform vacuum clearance maneuver (similar to HEKVs in space).
		- Fix point defense missile interceptors not firing.
		- Missile turrets now track targets properly in space.

1.6.12.0
IMPROVEMENTS / FIXES
- General:
	- Fix Pwing HP scaling for large pwings being used as fuselages.
	- Fix PWing Control Surface Offset angle resetting on one side.
	- Add a time-sync logging option (with auto-enable for competitions) for logging in-game vs real-time timestamps for post-recording resynchronisation.
		- Toggle and logging interval options are available in the "Other Settings" section of the settings.
		- The timestamps are logged as compressed CSV files in the BDArmory/Logs/TimeSync folder.
	- Add Waypoint Mode Course Builder GUI tool (accessible from the Waypoints Section of the vessel Spawner GUI) for easy construction of custom waypoint courses.
		- Can either manually construct course from scratch or record a course as you manually pilot a craft along the course path. Courses/gates on loaded courses can be deleted via right-click.
	- List of things that cannot be set to Wood hull material expanded to other functional parts (servos/radiators/ISRU converters/RTGs) that couldn't logically be made out of wood.
	- Restore the 'ControlledActions' on the KAL too.
	- Restructuring of the localisation files (both layout and many tags) for maintainability and ease-of-editing in IDEs.
		- Adds a script for maintaining structure between localisation files.